ACLOCAL_AMFLAGS = -I m4

if HAVE_MAKE_SILENT
  AM_MAKEFLAGS="--silent"
endif

SUBDIRS = \
  googleurl \
  tinyxml2 \
  leveldb \
  jml/math \
  jml/arch \
  jml/utils \
  jml/db \
  jml/algebra \
  jml/stats \
  jml/judy \
  jml/boosting \
  jml/neural \
  soa/jsoncpp \
  soa/types \
  soa/js \
  soa/sync \
  soa/sigslot \
  soa/gc \
  soa/service \
  soa/logger \
  soa/launcher \
  soa/utils \
  openrtb \
  common \
  core/monitor \
  core/banker \
  core/agent_configuration \
  core/post_auction \
  core/router \
  plugins/bid_request \
  plugins/augmentor \
  plugins/data_logger \
  plugins/bidding_agent \
  plugins/exchange \
  plugins/adserver \
  js \
  testing \
  examples
